@@ -17,6 +17,7 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.ResponseBody;
 
 import com.shop.entity.Product;
 import com.shop.service.ProductService;
@@ -40,72 +41,25 @@ public class ProductController {
 			@RequestParam(value = "sortBy", defaultValue = "null") Optional<String> sort
 		) {
 		// Pageable
-		Pageable pageable = PageRequest.of(p.orElse(0), 16);
+		Pageable pageable = PageRequest.of(page.orElse(0), 16);
 		Page<Product> list = null;
-		Sort sortOption = null;
 		// sort by category
 		if (!categoryId.get().equals("null") && sort.get().equals("null")) {
 			list = productService.findByCategoryID(categoryId.get(), pageable);
-			model.addAttribute("items", list);
+			model.addAttribute("products", list);
 			model.addAttribute("cateID", categoryId.get());
 		}
 		// onload, no sort option
 		if (categoryId.get().equals("null") && sort.get().equals("null")) {
-			list = productService.findAll(pageable);
-			model.addAttribute("items", list);
+			list = productService.findAllProduct(pageable);
+			model.addAttribute("products", list);
 		}
-		// sort by price and date
-		if (!sort.get().equals("null") && cid.get().equals("null")) {
-			// Price down
-			if (sort.get().equals("priceDown")) {
-				sortOption = Sort.by(Direction.DESC, "price");
-			}
-			// price up
-			if (sort.get().equals("priceUp")) {
-				sortOption = Sort.by(Direction.ASC, "price");
-			}
-			// Date down
-			if (sort.get().equals("dateDown")) {
-				sortOption = Sort.by(Direction.DESC, "createDate");
-			}
-			// Date up
-			if (sort.get().equals("dateUp")) {
-				sortOption = Sort.by(Direction.ASC, "createDate");
-
-			}
-			pageable = PageRequest.of(p.orElse(0), 6, sortOption);
-			list = productService.findAll(pageable);
-			model.addAttribute("items", list);
-		}
-
-		if (!sort.get().equals("null") && !cid.get().equals("null")) {
-			// Price down
-			if (sort.get().equals("priceDown")) {
-				sortOption = Sort.by(Direction.DESC, "price");
-			}
-			// price up
-			if (sort.get().equals("priceUp")) {
-				sortOption = Sort.by(Direction.ASC, "price");
-			}
-			// Date down
-			if (sort.get().equals("dateDown")) {
-				sortOption = Sort.by(Direction.DESC, "createDate");
-			}
-			// Date up
-			if (sort.get().equals("dateUp")) {
-				sortOption = Sort.by(Direction.ASC, "createDate");
-
-			}
-			pageable = PageRequest.of(p.orElse(0), 6, sortOption);
-			list = productService.findByCategoryID(cid.get(), pageable);
-			model.addAttribute("items", list);
-			model.addAttribute("cateID", cid.get());
-		}
+		
 		int totalPages = list.getTotalPages();
-		List<Integer> pageNumbers = IntStream.rangeClosed(1, totalPages).boxed().collect(Collectors.toList());
+		List<Integer> pageNumbers = IntStream.rangeClosed(1, totalPages).boxed().toList();
 		model.addAttribute("pageNumbers", pageNumbers);
 		model.addAttribute("sort", sort.get());
-		return "product/list";
+		return "user-page/product";
 	}
 
 	@RequestMapping("/list-all-product")
